# RoboHub

./: .editorconfig  .gitignore  .gitmodules  README.md  pyproject.toml
docs/: act.md  communication.md  policies.md  robot.md  robots.md  structure.md
scripts/: astribot_env.sh
src/robohub/: __init__.py
src/robohub/backends/: base.py
src/robohub/communication/: __init__.py  errors.py  policy_client.py  protocol.py  robot_client.py  robot_server.py  serialization.py
src/robohub/policies/: __init__.py  base.py
src/robohub/policies/act/: __init__.py  configuration.py  eval.py  policy.py  train.py
src/robohub/policies/act/config/: default.yaml
src/robohub/policies/act/data/: __init__.py  convert_astribot.py  dataset.py
src/robohub/policies/act/model/: __init__.py  backbone.py  build.py  detr_vae.py  policy.py  position_encoding.py  transformer.py
src/robohub/policies/fake_policy/: __init__.py  policy.py
src/robohub/policies/my_policy/: __init__.py  policy.py
src/robohub/processing/: __init__.py  base.py  visual.py
src/robohub/processing/point_cloud/: __init__.py  depth_to_point_cloud.py  get_point_cloud.py
src/robohub/processing/segmentation/: __init__.py
src/robohub/processing/transforms/: __init__.py
src/robohub/robots/: __init__.py  base.py
src/robohub/robots/astribot/: __init__.py  backend.py  robot.py
src/robohub/robots/fake_robot/: __init__.py  robot.py
src/robohub/robots/my_robot/: __init__.py  backend.py  robot.py
src/robohub/schemas/: __init__.py  action.py  observation.py  raw_observation.py
src/robohub/utils/: __init__.py  config.py  logging.py  timing.py  types.py
tests/astribot/: __init__.py  get_observation.py  replay_data_real.py  replay_data_sim.py  run_policy.py  run_robot.py
tests/communication/: run_fake_policy_client.py  run_fake_robot_server.py  run_policy.py  test_client_disconnect.py
tests/mytest/: run_policy.py  run_robot.py
tests/policies/act/: test_configuration.py  test_conversion.py  test_policy.py
(+14 files in other folders)
