[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robohub"
version = "0.1.0"
description = "Extensible robot and policy runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "PyYAML>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robohub = ["robots/*/configs/*.yaml", "policies/*/config/*.yaml"]
